hphp/hack/test/typecheck/const_attribute/usage/superclass_prop_not_const.php.exp
File "superclass_prop_not_const.php", line 4, characters 14-15:
This property is not __Const (Typing[4204])
File "superclass_prop_not_const.php", line 9, characters 14-15:
This property is __Const
