hphp/hack/test/typecheck/const_attribute/usage/superclass_prop_not_const.php
<?hh // strict

class A {
  public int $x = 4;
}

class B extends A {
  <<__Const>>
  public int $x = 42;
}
